# openrouter-model-explorer

./: .gitignore  LICENSE  README.md  app.py  app_contents.txt  main.py  pyproject.toml  requirements.txt  run.ps1  run.sh
config/: heuristics.json
